# demo-fastapi

./: .editorconfig  .env  .gitignore  .pdm-python  Dockerfile  README.md  README_zh.md  alembic.ini  commands.md  config.example.toml  config.example.yml  config.yml  config.yml.template  docker-compose.yml  main.py  pyproject.toml  pyproject_poetry.toml  requirements.txt
.cursor/rules/: best-practices.mdc  code-architecture.mdc  development-guide.mdc  project-overview.mdc
alembic/: env.py
alembic/versions/: 03a3ccad02ac_first_commit.py  132516fac681_init.py  263a1e26f3cc_init.py  3a4ac93dcb05_migrate_models.py  75f510d2e656_add_cloumn_description2_for_item.py  78ccb5b615dd_init.py  7ac40f925846_init.py
app/: __init__.py  api2.py  main.py  worker.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: demo.py  items.py  users.py
app/api/v1/: api.py
app/api/v1/routers/: items.py  users.py
app/apps/chat_websocket/: chat.py
app/apps/features/: __init__.py  router.py  schemas.py
app/apps/pd_validate_serialize/: schemas.py
app/core/: config.py  config2.py  db.py  decorators.py  dependencies.py
app/crud/: __init__.py  crud_item.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  models.py  session.py
app/models/: __init__.py  item.py  llm.py  product.py  student_course.py  user.py
app/routers/: __init__.py  data_join.py
app/schemas/: item.py  user.py
docs/: demo-fastapi.xmind
examples/: ark_llm_api.py  batch_update.py  celery_simple.py  data_type.py  deepseek.py  dotenvs.py  load_json_to_pydanticc.py  mod_2.py  multiple_insert.py  my_class.py  my_exception.py  psycopg.py  pydantic_model_validate.py  pydantic_root_model.py  read_env.py  redis_cli.py  redis_rate_limiter.py  simple_api.py  sqlalchemy_.py
scripts/: features.py  worker-start.sh
src/: __init__.py  constants.py
src/api/: deps.py
src/api/v1/: api.py
src/api/v1/routers/: items.py  users.py
src/apps/: README.md
src/apps/features/: router.py
src/core/: config.py  db.py  deps.py
src/crud/: crud_item.py  crud_user.py
src/demo_fastapi/: __init__.py  init_data.py  main.py
src/demo_fastapi/api/: deps.py
src/demo_fastapi/api/v1/: api.py
src/demo_fastapi/api/v1/routers/: items.py  users.py
src/demo_fastapi/apps/features/: __main__.py
src/demo_fastapi/apps/pd_validate_serialize/: models.py  router.py
src/demo_fastapi/core/: cache.py  config.py  db.py  deps.py  security.py
src/demo_fastapi/crud/: README.md  __init__.py  crud_item.py  crud_user.py
src/demo_fastapi/domains/: product.py
src/demo_fastapi/models/: __init__.py  auth.py  base.py  item.py  job.py  llm.py  order.py  product.py  publication.py  relationship.py  student_course.py  todo.py  user.py
src/demo_fastapi/routers/: __init__.py  data_join.py  demo.py  relationship.py  student_course.py
src/demo_fastapi/routes/: __init__.py  auth.py  cache_examples.py  demo.py  depend_system.py  item.py  relationship.py  student_course.py  todo.py
src/demo_fastapi/schemas/: __init__.py  base.py  item.py  order.py  todo.py  user.py
src/demo_fastapi/services/: __init__.py  product.py  todo.py  user.py
src/demo_fastapi/utils/: image_utils.py
src/models/: __init__.py  item.py  llm.py  user.py
src/package2/: __init__.py  __main__.py
src/routers/: data_join.py  demo.py
src/schemas/: item.py  user.py
tests/: conftest.py  test_config.py  test_db.py  test_hello.py  test_util.py
